# fscript

./: .gitignore  Cargo.toml  PLAN_IMPROVE_DOCS.md  README.md
.github/workflows/: ci.yml  release.yml
crates/fscript-ast/: Cargo.toml
crates/fscript-ast/src/: lib.rs
crates/fscript-cli/: Cargo.toml  build.rs
crates/fscript-cli/src/: main.rs
crates/fscript-cli/src/snapshots/: fscript__tests__cli_help.snap
crates/fscript-cli/tests/: cli.rs
crates/fscript-cli/tests/snapshots/: cli__compile_failure_output.snap  cli__help_output.snap
crates/fscript-codegen-cranelift/: Cargo.toml
crates/fscript-codegen-cranelift/src/: lib.rs  native.rs
crates/fscript-compile-runner/: Cargo.toml  build.rs
crates/fscript-compile-runner/src/: main.rs
crates/fscript-driver/: Cargo.toml
crates/fscript-driver/src/: lib.rs
crates/fscript-driver/src/snapshots/: fscript_driver__tests__compile_error_output.snap  fscript_driver__tests__parse_error_output.snap
crates/fscript-driver/tests/: diagnostics.rs
crates/fscript-driver/tests/snapshots/: diagnostics__compile_error.snap  diagnostics__parse_error.snap  diagnostics__type_error.snap
crates/fscript-effects/: Cargo.toml
crates/fscript-effects/src/: lib.rs
crates/fscript-hir/: Cargo.toml
crates/fscript-hir/src/: lib.rs
crates/fscript-interpreter/: Cargo.toml
crates/fscript-interpreter/src/: lib.rs
crates/fscript-ir/: Cargo.toml
crates/fscript-ir/src/: lib.rs
crates/fscript-lexer/: Cargo.toml
crates/fscript-lexer/proptest-regressions/: lib.txt
crates/fscript-lexer/src/: lib.rs
crates/fscript-lexer/src/snapshots/: fscript_lexer__tests__representative_lexed_file.snap
crates/fscript-lower/: Cargo.toml
crates/fscript-lower/src/: lib.rs
crates/fscript-parser/: Cargo.toml
crates/fscript-parser/proptest-regressions/: lib.txt
crates/fscript-parser/src/: lib.rs
crates/fscript-parser/src/snapshots/: fscript_parser__tests__representative_parsed_module.snap
crates/fscript-runtime/: Cargo.toml
crates/fscript-runtime/src/: lib.rs
crates/fscript-source/: Cargo.toml
crates/fscript-source/src/: lib.rs  source_file.rs  span.rs
crates/fscript-std/: Cargo.toml
crates/fscript-std/src/: lib.rs
crates/fscript-test-support/: Cargo.toml
crates/fscript-test-support/src/: lib.rs
crates/fscript-types/: Cargo.toml
crates/fscript-types/src/: lib.rs
crates/fscript-wasm/: Cargo.toml
crates/fscript-wasm/src/: lib.rs
docs/: astro.config.mjs  fs.tmLanguage.json  package-lock.json  package.json
docs/src/components/: Sandbox.astro  Sandbox.ts  SiteTitle.astro
docs/src/content/docs/: index.mdx  sandbox.mdx
docs/src/content/docs/cli/: check.md  compile.md  overview.md  run.md
docs/src/content/docs/examples/: data-pipelines.md  filesystem-scripts.md  generators-and-sequences.md  overview.md  parsing-and-validation.md  result-based-error-handling.md
docs/src/content/docs/getting-started/: installation.md  project-layout.md  running-checking-compiling.md  (+1 more)
examples/: array_pipeline.fs  deferred_function_argument.fs  deferred_math.fs  deferred_record_access.fs  filesystem.fs  generator_counter.fs  hello_world.fs  match_tagged_union.fs  object_merge.fs  result_error_handling.fs  try_catch_throw.fs
examples/http_hello_server/: README.md  main.fs  response.fs  router.fs
specs/: CODE_STYLE.md  DOCS_PLAN.md  GRAMMAR.md  IMPLEMENTATION_PLAN.md  LANGUAGE.md  NATIVE_ABI.md  RUNTIME.md  STDLIB.md  TYPESYSTEM.md
(+61 files in other folders)
