[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
camino = "1.2.1"
clap = { version = "4.5.32", features = ["derive"] }
cranelift-codegen = "0.129.1"
cranelift-frontend = "0.129.1"
cranelift-module = "0.129.1"
cranelift-native = "0.129.1"
cranelift-object = "0.129.1"
insta = "1.43.2"
logos = "0.15.1"
miette = { version = "7.6.0", features = ["fancy"] }
proptest = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
thiserror = "2.0.12"
wasm-bindgen = "0.2.100"
